--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="home.css" />
 </head>
 <body>
-	<h1>Notre super page d'entreprise.</h1>
+	<h1>Notre super MEGA !!!!! page d'entreprise.</h1>
 	<p>Vous pouvez y trouver des informations sur notre équipe, un lien vers nos courses, et notre super logo. Et tout ça de manière vachement stylée.</p>
 	<p><a href="/utrail/">Lien course u-trail</a></p>
 </body>
