--- a/log.html
+++ b/log.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -20,16 +19,22 @@
             <h3 class="masthead-brand">Univer'City Trail #1</h3>
             <nav class="nav nav-masthead justify-content-center">
 
-                <a class="nav-link " href="log.html">
+
+                <a class="nav-link active" href="log.html">
                     Connexion</a>
 
             </nav>
         </div>
     </header>
+    <main><form action="log.php" method="post">
+        <label for="pwd">Mot de passe : </label>
+        <input type="password" name="pwd" id="pwd" required>
+        <input type="submit" value="Envoyer">
+    </form></main>
 
 </div>
 
-<script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
+<script src=/libs/bootstrap/dist/js/bootstrap.bundle.js></script>
 
 </body>
 
